# eml2md

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  eml2md.py  lang_fields.toml
