[project]
name = "eml2md"
dynamic = ["version"]
description = "Crude and basic Python script to convert .eml files saved locally to Markdown files."
authors = [
	{name = "webyacusa"},
	{name = "Liam Twomey"},
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
	"Private :: Do Not Upload",
	"Devlopment Status :: 4 - Beta",
	"Programming Language :: Python :: 3",
]
dependencies = [
	'email-validator >= 2.0.0',
	'python-dateutil >= 2.8.2'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
eml2md = "src"

[project.scripts]
# defines this as an executable for uv
eml2md = "eml2md:__name__"

[tool.setuptools.dynamic]
version = {attr = "eml2md.__version__"}

[tool.uv.sources]
eml2md = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
    ".",
]
